--- a/nuspec/XmlToCSharp.nuspec
+++ b/nuspec/XmlToCSharp.nuspec
@@ -1,29 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
-	<metadata>
-		<id>XmlToCSharp</id>
+  <metadata>
+    <id>XmlToCSharp</id>
 		<version>1.0.0-pre06</version>
-		<title>XmlToCSharp</title>
-		<authors>Invisionware</authors>
-		<owners>Invisionware</owners>
-		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<description>Library to help dynamically create C# classes from Xml</description>
-		<summary></summary>
-		<projectUrl>https://github.com/ravensorb/XmlToCSharp</projectUrl>
-		<licenseUrl>https://github.com/ravensorb/XmlToCSharp/master/LICENSE</licenseUrl>
-		<releaseNotes></releaseNotes>
-		<copyright>Copyright © 2018 Invisionware</copyright>
-		<language>en-US</language>
-		<tags>xml serializer</tags>
-		<dependencies>
-		</dependencies>
-	</metadata>
-	<files>
-		<!-- Framework: .NET 4.7.1 -->
-		<file src="..\src\Xml2CSharp\bin\$Configuration$\Xml2CSharp.dll" target="lib\net471" />
-		<file src="..\src\Xml2CSharp\bin\$Configuration$\Xml2CSharp.pdb" target="lib\net471" />
-		
-		<file src="..\src\Xml2CSharp.Clent\bin\$Configuration$\*" target="tools\client" />
+    <title>XmlToCSharp</title>
+    <authors>Invisionware</authors>
+    <owners>Invisionware</owners>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>Library to help dynamically create C# classes from Xml</description>
+    <summary></summary>
+    <projectUrl>https://github.com/ravensorb/XmlToCSharp</projectUrl>
+    <licenseUrl>https://github.com/ravensorb/XmlToCSharp/master/LICENSE</licenseUrl>
+    <releaseNotes></releaseNotes>
+    <copyright>Copyright © 2018 Invisionware</copyright>
+    <language>en-US</language>
+    <tags>xml serializer</tags>
+    <dependencies>
+    </dependencies>
+  </metadata>
+  <files>
+    <!-- Framework: .NET 4.7.1 -->
+    <file src="..\src\Xml2CSharp\bin\$Configuration$\Xml2CSharp.dll" target="lib\net471" />
+    <file src="..\src\Xml2CSharp\bin\$Configuration$\Xml2CSharp.pdb" target="lib\net471" />
+    
+    <file src="..\src\Xml2CSharp.Clent\bin\$Configuration$\*" target="tools\client" />
 
-	</files>
+  </files>
 </package>
